Version 2.43 - 30 September 2008

- mdkapplet
  o don't show the applet when there's no network

Version 2.42 - 4 September 2008

- mdkapplet:
  o fix dowloading distributions list
  o offer to add media directly from bubble (#39987)
  o prevent running media manager more than one at a time
  o run media manager with --no-splash' option and handle "--urpmi-root=$root"
  o check again after adding update media

Version 2.41 - 7 August 2008, Thierry Vignaud

- mdkapplet:
  o add support for --rpm-root=foobar and --urpmi-root=foobar
  o add support for live upgrade when a new distributions is released

Version 2.40 - 8 May 2008, Thierry Vignaud

- mdkapplet:
  o run MandrivaUpdate with --no-splash option in order to skip splash
    screen (#40366)

Version 2.39 - 21 March 2008, Thierry Vignaud

- mdkapplet:
  o check for network just before first check
  o do not check for network while checking for updates
  o do not show icon while checking if previously hidden
  o do not show icon while waiting for initial check
  o do not skip first RPM check (change made in 2.16 in march 2007)
  o do not start network cyclic checks before first media test (#38991)
  o kill suppport for bundles
  o reduce resident size by 9MB aka 30% (#31860)

Version 2.38 - 20 March 2008, Thierry Vignaud

- do not display "install updates" button when notifying about network
  being down
  (regression introduced in 2.35: "offer to install updates in
  notifications")

Version 2.37 - 19 March 2008, Olivier Blin

- simplify network detection

Version 2.36 - 14 March 2008, Thierry Vignaud

- mdkapplet:
  o bump copyright year
  o do not check for network before first media test (#38991)

Version 2.35 - 14 March 2008, Thierry Vignaud

- mdkapplet:
  o offer to install updates in notifications

Version 2.34 - 12 March 2008, Thierry Vignaud

- mdkapplet:
  o do not keep complaining if nightly update cron had failled (#38531)

Version 2.33 - 10 March 2008, Thierry Vignaud

- mdkapplet: