@@ -1,3 +1,6 @@
+- mdkapplet
+  o add support for downloading distro list as user for 2008.1
+
 Version 2.43 - 30 September 2008
 
 - mdkapplet
